Fix: Prevent the expanded header from overlapping page content in TV layout on some resolutions

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -1005,7 +1005,7 @@ div[data-role=controlgroup] a.ui-btn-active {
         width: auto;
     }
 
-    .libraryPage:not(.noSecondaryNavPage) {
+    .libraryPage:not(.noSecondaryNavPage):not(.layout-tv .libraryPage) {
         padding-top: 4.8em !important;
     }
 }
